Fix lifetime issues for HeadlessBrowserContext observers.

Bug: 751180, 739458
Change-Id: Iceb120b6ddf94f9e032ad5e22d002a6ab44dbbd5