headless/public/headless_browser_context.h
@@ -89,6 +89,9 @@ class HEADLESS_EXPORT HeadlessBrowserContext::Observer {
   // thread.
   virtual void UrlRequestFailed(net::URLRequest* request, int net_error) {}
 
+  // Indicates the HeadlessBrowserContext is about to be deleted.
+  virtual void OnHeadlessBrowserContextDestruct() {}
+
  protected:
   virtual ~Observer() {}
 };
